# Create

./: Cargo.toml  LICENSE  config.toml
.cargo/: config.toml
src/: cameras.rs  configs.rs  constants.rs  main.rs  main_game.rs  main_menu.rs  pause_menu.rs  states.rs  ui.rs
src/assets/loader/: toml.rs
src/configs/: game_config.rs
src/ui/: ingame.rs  main_menu.rs  pause_menu.rs  settings.rs
