[package]
name = "Create"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
