[package]
name = "Create"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
